# nixclaw

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  TASK.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/examples/: 01_basic_usage.py  02_streaming_output.py  04_team_mode.py  05_custom_tools.py  06_task_manager.py  07_event_bus.py  08_api_client.py  11_retry_and_error_handling.py  13_health_check.py  16_database_persistence.py  README.md
docs/examples/api/: 01_curl_examples.sh  02_python_client.py  03_async_client.py  04_webhook_receiver.py  README.md
docs/examples/cli/: 01_one_shot.sh  02_team_mode.sh  03_interactive.sh  04_serve_api.sh  05_start_telegram.sh  06_real_world_tasks.sh  README.md
docs/examples/telegram/: 01_register_commands.py  02_send_notifications.py  03_log_bot.py  04_human_in_the_loop.py  05_bot_in_script.py  README.md
nixclaw/: __init__.py  __main__.py  config.py  logger.py  main.py
nixclaw/agents/: agent_factory.py  agent_profiles.py  base_agent.py  orchestrator.py
nixclaw/api/: app.py  routes.py  schemas.py
nixclaw/core/: async_task_queue.py  command_executor.py  context_manager.py  event_bus.py  health.py  retry.py  security.py  task_manager.py
nixclaw/integrations/: openai_client.py  telegram_bot.py  telegram_log.py  webhooks.py
nixclaw/storage/: cache.py  database.py  models.py  repository.py
nixclaw/tools/: agent_tool.py  directory_ops.py  file_operations.py  search_tools.py  shell_executor.py  telegram_tool.py
scripts/: run.sh  setup.sh
tests/integration/: test_api.py  test_tools.py
tests/safety/: test_shell_safety.py
tests/unit/: test_async_queue.py  test_context_manager.py  test_database.py  test_retry.py  test_security.py  test_shell_executor.py  test_task_manager.py
